--- a/src/views/Stocks/styles.css
+++ b/src/views/Stocks/styles.css
@@ -105,13 +105,13 @@ a{
 
 .company-symbol, .company-name, .open-title, .fechamento-title, .volume-title, 
 .market-cap-title, .high-title, .low-title, .price-title, .lucro-title, 
-.descricao-title, .industry-title, .forward_pe-title, .news-title, .link-title, .float-title{
+.descricao-title, .industry-title, .forward_pe-title, .news-title, .link-title, .float-title, .acao_similar-title{
     font-weight: bold;
 }
 
 .company-symbol, .company-name, .open-text, .fechamento-text, .volume-text, 
 .market-cap-text, .high-text, .low-text, .price-text, .lucro-text, 
-.descricao-text, .industry-text, .forward_pe-text,.news-text, .link-text, .float-text{
+.descricao-text, .industry-text, .forward_pe-text,.news-text, .link-text, .float-text, .acao_similar-text{
     color: #f0f0f0;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -206,12 +206,22 @@ a{
     top: 630px;
 }
 
-.descricao{
+.acao_similar{
     padding: 40px;
     position: absolute;
     left: 20px;
     top: 740px;
+
 }
+
+.descricao{
+    padding: 40px;
+    position: absolute;
+    left: 20px;
+    top: 840px;
+}
+
+
 
 .high{
     position: absolute;
