--- a/src/views/Stocks/styles.css
+++ b/src/views/Stocks/styles.css
@@ -105,15 +105,17 @@ a{
 
 .company-symbol, .company-name, .open-title, .fechamento-title, .volume-title, 
 .market-cap-title, .high-title, .low-title, .price-title, .lucro-title, 
-.descricao-title, .industry-title, .forward_pe-title, .news-title, .link-title, .float-title, .acao_similar-title{
+.descricao-title, .industry-title, .forward_pe-title, .news-title, .link-title,
+ .float-title, .acao_similar-title, .pais-title, .employees-title{
     font-weight: bold;
 }
 
 .company-symbol, .company-name, .open-text, .fechamento-text, .volume-text, 
 .market-cap-text, .high-text, .low-text, .price-text, .lucro-text, 
-.descricao-text, .industry-text, .forward_pe-text,.news-text, .link-text, .float-text, .acao_similar-text{
+.descricao-text, .industry-text, .forward_pe-text,.news-text, .link-text, 
+.float-text, .acao_similar-text, .pais-text, .employees-text{
     color: #f0f0f0;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-bottom: 20px;
     margin-left: 10px;
 }
@@ -200,28 +202,36 @@ a{
 }
 
 .forward_pe{
-    padding: 40px;
     position: absolute;
-    left: 20px;
-    top: 630px;
+    left: 50px;
+    top: 670px;
 }
 
 .acao_similar{
-    padding: 40px;
     position: absolute;
-    left: 20px;
-    top: 740px;
+    left: 50px;
+    top: 770px;
 
+}
+
+.employees{
+    position: absolute;
+    left: 420px;
+    top: 770px;
+}
+
+.pais{
+    position: absolute;
+    left: 50px;
+    top: 870px;
 }
 
 .descricao{
     padding: 40px;
     position: absolute;
     left: 20px;
-    top: 840px;
+    top: 940px;
 }
-
-
 
 .high{
     position: absolute;
@@ -263,7 +273,7 @@ a{
     width: 750px;
     background-color: #212121;
     position: relative;
-    top: 1300px;
+    top: 1500px;
     left: -40px;
 }
 
