--- a/src/views/Stocks/styles.css
+++ b/src/views/Stocks/styles.css
@@ -7,13 +7,13 @@ html {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .line {
     margin-top: 30px;
+    margin-left: 2rem;
     width: 800px;
-    margin-left: 30px;
     background: #212121;
     border-radius: 4px;
 }
@@ -21,12 +21,16 @@ html {
 .second-content {
     display: flex;
     flex-direction: row;
+    justify-content: center; 
+    margin-top: 2rem;
 }
 
 .trending {
-    padding: 30px;
-    width: 500px;
-    margin-right: 100px;
+    width: 400px;
+    /* margin-right: 2rem; */
+}
+.trending .title-page {
+    margin-top: 0px;
 }
 
 .link-text {
@@ -36,6 +40,7 @@ html {
 .list-stocks {
     border-radius: 8px;
     margin-top: 20px;
+    width: 400px;
     background: #212121;
 }
 
@@ -75,12 +80,15 @@ a {
     padding: 50px 40px;
     border-radius: 8px;
     background: #212121;
-    margin-right: 30px;
+    box-sizing: border-box;
+    width: 400px;
+    /* margin-right: 30px; */
 }
 
-.form-control {
-    width: 400px !important;
-    height: 35px !important;
+.search-input {
+    width: 100%;
+    height: 35px;
+    /* box-sizing: border-box; */
 }
 
 .search-stock {
@@ -118,6 +126,7 @@ a {
 .pais-title,
 .employees-title {
     font-weight: bold;
+    padding: 0 1.5rem;
 }
 
 .company-symbol,
@@ -143,6 +152,9 @@ a {
     margin-top: 10px;
     margin-bottom: 20px;
     margin-left: 10px;
+    text-align: left;
+    padding: 0 1rem;
+    font-size: 1rem;
 }
 
 .market-title {
@@ -158,105 +170,6 @@ a {
     line-height: 28px;
 }
 
-.company-symbol {
-    font-size: 32px;
-    top: 0;
-    left: 0px;
-    color: #2c82c9;
-}
-
-.company-name {
-    font-size: 18px;
-    top: 0;
-    left: 10px;
-}
-
-.stock-price {
-    left: 50px;
-    top: 170px;
-}
-
-.open {
-    left: 50px;
-    top: 270px;
-}
-
-.volume {
-    left: 420px;
-    top: 370px;
-}
-
-.market-cap {
-    left: 420px;
-    top: 470px;
-}
-
-.float-shares {
-    left: 420px;
-    top: 570px;
-}
-
-.fechamento {
-    left: 50px;
-    top: 370px;
-}
-
-.lucro {
-    left: 420px;
-    top: 670px;
-}
-
-.industria {
-    left: 50px;
-    top: 470px;
-}
-
-.link {
-    left: 50px;
-    top: 570px;
-}
-
-.forward_pe {
-    left: 50px;
-    top: 670px;
-}
-
-.acao_similar {
-    left: 50px;
-    top: 770px;
-}
-
-.employees {
-    left: 420px;
-    top: 770px;
-}
-
-.pais {
-    left: 50px;
-    top: 870px;
-}
-
-.descricao {
-    padding: 40px;
-    left: 20px;
-    top: 940px;
-}
-
-.high {
-    top: 170px;
-    left: 420px;
-}
-
-.low {
-    top: 270px;
-    left: 420px;
-}
-
-.market {
-    top: 83px;
-    left: 400px;
-}
-
 .log-out {
     width: 100%;
     margin-top: 40px;
@@ -264,6 +177,7 @@ a {
 
 .hr {
     background-color: #f0f0f0;
+    flex-basis: 100%;
 }
 
 .news-break {
@@ -301,11 +215,18 @@ a {
 }
 
 .information-table {
-    margin-top: 3rem;
+    margin-left: 2rem;
     background-color: #212121;
     width: 800px;
     display: flex;
     flex-direction: column;
+    padding: 1.5rem 0px;
+    box-sizing: border-box;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
 }
 
 .information-table table {
@@ -333,6 +254,7 @@ a {
 }
 .information-table .common-text-group .link-text {
     margin: 0;
+    padding: 0;
 }
 
 .information-table .title {
@@ -342,7 +264,7 @@ a {
 .information-table .text {
     color: #f0f0f0;
     text-align: left;
-    font-size: 20px;
+    font-size: 1rem;
     padding: 1.5rem;
-    font-weight: 600;
+    /* font-weight: 600; */
 }
